# python-best-practices

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: issue.py  soluce.py  test_soluce.py  typing_guide.py
worksop/naming/: __init__.py  naming.py
